--- a/frontend/CourierDashboard.html
+++ b/frontend/CourierDashboard.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <a href="#" class="logo">QuickDrop</a>
+        <a href="landingpage.html" class="logo">QuickDrop</a>
         
         <nav class="main-nav" id="mainNav">
             <ul>
