--- a/frontend/CustomerDashboard.html
+++ b/frontend/CustomerDashboard.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <a href="#" class="logo">QuickDrop</a>
+        <a href="landingpage.html" class="logo">QuickDrop</a>
         
         <nav class="main-nav" id="mainNav">
             <ul>
@@ -143,6 +143,32 @@
                 <div class="form-group">
                     <label for="receiverPhone">Receiver Phone</label>
                     <input type="tel" id="receiverPhone" name="receiverPhone" placeholder="+250 788..." required>
+                </div>
+
+                <div class="form-group">
+                    <label for="courier">Choose Delivery Person</label>
+                    <select id="courier" name="courier" required>
+                        <option value="">Select available courier</option>
+                        <option value="david">David L. - Online (Rating: 4.8)</option>
+                        <option value="sarah">Sarah K. - Online (Rating: 4.9)</option>
+                        <option value="mike">Mike R. - Offline</option>
+                        <option value="jane">Jane M. - Online (Rating: 4.7)</option>
+                    </select>
+                    <small class="courier-note">Only online couriers are available for selection</small>
+                </div>
+
+                <div class="form-group">
+                    <label>Pickup Location Map</label>
+                    <div id="pickupMap">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63800.03080612053!2d30.01950794863281!3d-1.9540456999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca4258ed8e797%3A0xf32b36a5053b7f20!2sKigali%2CRwanda!5e0!3m2!1sen!2sin!4v1731002119385!5m2!1sen!2sin" 
+                            width="100%" 
+                            height="200" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
                 </div>
 
                 <button type="submit" class="modal-submit-btn">Request Booking</button>
