--- a/frontend/dispatcher.html
+++ b/frontend/dispatcher.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,7 +37,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: bold;
-            color: #0d6efd; /* Blue from presentation theme */
+            color: #4a7c2a; /* Green theme */
         }
 
         header nav ul {
@@ -125,7 +126,7 @@
 
         .stat-card h3 {
             font-size: 2rem;
-            color: #0d6efd;
+            color: #4a7c2a;
         }
 
         .stat-card p {
@@ -170,11 +171,11 @@
         }
         
         .list-item .status.en-route {
-            color: #0d6efd; /* Blue for 'en-route' */
+            color: #4a7c2a; /* Green for 'en-route' */
         }
 
         .assign-button {
-            background-color: #0d6efd;
+            background-color: #4a7c2a;
             color: white;
             border: none;
             padding: 0.75rem 1rem;
@@ -187,7 +188,7 @@
         }
 
         .assign-button:hover {
-            background-color: #0b5ed7;
+            background-color: #3d6a23;
         }
 
     </style>
@@ -282,3 +283,4 @@
 
 </body>
 </html>
+-->
