--- a/frontend/SignUp.html
+++ b/frontend/SignUp.html
@@ -162,7 +162,7 @@
         <div class="modal-content">
             <span class="close-btn">&times;</span>
             <h2>Courier Application Details</h2>
-            <p>Please provide the following information to complete your **Courier** profile with QuickDrop.</p>
+            <p style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 1rem; color: #555; line-height: 1.6; margin-bottom: 1.5rem;">Please provide the following information to complete your <strong>Courier</strong> profile with QuickDrop.</p>
             
             <form id="courier-details-form">
                 
