--- a/frontend/landingpage.html
+++ b/frontend/landingpage.html
@@ -127,7 +127,7 @@
                         </div>
                     </div>
 
-                    <div class="feature-card image-feature" style="background-image: url('https://images.unsplash.com/photo-1508780709619-79562169bc64?auto=format&fit=crop&w=1200&q=60');">
+                    <div class="feature-card image-feature" style="background-image: url('https://th.bing.com/th?q=Real-Time+Tracking+Map+Screen&w=120&h=120&c=1&rs=1&qlt=70&o=7&cb=1&dpr=1.5&pid=InlineBlock&rm=3&mkt=en-WW&cc=RW&setlang=en&adlt=moderate&t=1&mw=247');">
                         <div class="feature-text">
                             <h3>Real-Time Tracking</h3>
                             <p>Monitor your parcel from pickup to delivery with live location updates.</p>
