1. Removed Inline css and js 2. Updated Signup page with green and fixed popup with borders and added color on the choose file option(green) 3. added Image folder for 24/7 feature card and for landing page (get started)

--- a/frontend/landingpage.html
+++ b/frontend/landingpage.html
@@ -35,13 +35,12 @@
                 </button>
             </div>
         </nav>
-        <button id="darkModeToggle" class="dark-toggle">🌙</button>
     </header>
 
     <main>
-        <section id="home" class="hero">
+        <section id="home" class="hero animate-on-scroll">
             <div class="container">
-                <div class="hero-content">
+                <div class="hero-content fade-in-up">
                     <h2 class="hero-title">Fast &amp; Reliable Parcel Delivery Across Rwanda</h2>
                     <p class="hero-subtitle">Connect senders and receivers seamlessly. Your parcels delivered safely and on time.</p>
                     <a href="SignUp.html" class="btn btn-primary">Get Started Today</a>
@@ -49,12 +48,12 @@
             </div>
         </section>
         
-        <section id="track" class="track-section">
+        <section id="track" class="track-section animate-on-scroll">
             <div class="container">
-                <h2 class="section-title">Track Your Parcel</h2>
-                <p class="track-description">Senders and receivers can track deliveries in real-time</p>
+                <h2 class="section-title fade-in-up">Track Your Parcel</h2>
+                <p class="track-description fade-in-up">Senders and receivers can track deliveries in real-time</p>
                 
-                <div class="track-form">
+                <div class="track-form fade-in-up">
                     <input type="text" id="trackingNumber" placeholder="Enter order number (e.g., #1021)" class="track-input">
                     <button type="button" id="trackBtn" class="btn btn-secondary">Track</button>
                 </div>
@@ -134,7 +133,7 @@
                         </div>
                     </div>
 
-                    <div class="feature-card image-feature" style="background-image: url('https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&w=1200&q=60');">
+                    <div class="feature-card image-feature" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1200&q=60');">
                         <div class="feature-text">
                             <h3>24/7 Support</h3>
                             <p>Round-the-clock customer support to help with any delivery questions.</p>
