1. Improve hero background image quality with better settings & Hover effects on Pricing and Contact 2. Text transitions on hero section of landingpage 3. Applied light green on Track section background

--- a/frontend/landingpage.html
+++ b/frontend/landingpage.html
@@ -34,15 +34,15 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
-            <div class="container">
-                <div class="hero-content">
-                    <h2 class="hero-title">Fast &amp; Reliable Parcel Delivery Across Rwanda</h2>
-                    <p class="hero-subtitle">Connect senders and receivers seamlessly. Your parcels delivered safely and on time.</p>
-                    <a href="SignUp.html" class="btn btn-primary">Get Started Today</a>
-                </div>
-            </div>
-        </section>
+       <section id="home" class="hero">
+    <div class="container">
+        <div class="hero-content" id="heroContent">
+            <h2 class="hero-title">Fast &amp; Reliable Parcel Delivery Across Rwanda</h2>
+            <p class="hero-subtitle">Connect senders and receivers seamlessly. Your parcels delivered safely and on time.</p>
+            <a href="SignUp.html" class="btn btn-primary">Get Started Today</a>
+        </div>
+        </div>
+</section>
 
         <section id="track" class="track-section">
             <div class="container">
