Fixed broken nav, track functionality, implemented liq glass in all the pages, reduced style.css file size by 78%

--- a/frontend/landingpage.html
+++ b/frontend/landingpage.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="landing-page">
     <header>
         <div class="header-inner container" role="navigation" aria-label="Main navigation">
             <a class="logo" href="landingpage.html">QuickDrop</a>
@@ -24,11 +24,6 @@
                     <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
-                <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </button>
             </nav>
         </div>
     </header>
