Responsiveness overhaul update, Hamburger menu cleanup, liquid glass look

--- a/frontend/landingpage.html
+++ b/frontend/landingpage.html
@@ -12,32 +12,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="landing-page">
-    <header>
-        <div class="header-inner container" role="navigation" aria-label="Main navigation">
-            <a class="logo" href="landingpage.html">QuickDrop</a>
+   <header>
+    <div class="header-inner container" role="navigation" aria-label="Main navigation">
+        <a class="logo" href="landingpage.html">QuickDrop</a>
 
-            <nav>
-                <ul class="nav-menu" id="navMenu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#track">Track</a></li>
-                    <li><a href="#how-it-works">How It Works</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul class="nav-menu" id="navMenu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#track">Track</a></li>
+                <li><a href="#how-it-works">How It Works</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+
+        <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
+    </div>
     </header>
 
     <main>
        <section id="home" class="hero">
-    <div class="container">
-        <div class="hero-content" id="heroContent">
-            <h2 class="hero-title">Fast &amp; Reliable Parcel Delivery Across Rwanda</h2>
-            <p class="hero-subtitle">Connect senders and receivers seamlessly. Your parcels delivered safely and on time.</p>
-            <a href="SignUp.html" class="btn btn-primary">Get Started Today</a>
-        </div>
-        </div>
-</section>
+            <div class="container">
+                <div class="hero-content" id="heroContent">
+                    <h2 class="hero-title">Fast &amp; Reliable Parcel Delivery Across Rwanda</h2>
+                    <p class="hero-subtitle">Connect senders and receivers seamlessly. Your parcels delivered safely and on time.</p>
+                    <a href="SignUp.html" class="btn btn-primary">Get Started Today</a>
+                </div>
+            </div>
+        </section>
 
         <section id="track" class="track-section">
             <div class="container">
