live task hamburger fix

--- a/frontend/CourierLiveTask.html
+++ b/frontend/CourierLiveTask.html
@@ -9,8 +9,11 @@
 <body class="full-height">
 
     <header>
-        <a href="CourierDashboard.html" class="logo">QuickDrop</a>
-        <a href="CourierDashboard.html" class="nav-link">← End Navigation</a>
+        <div class="header-inner container">
+            <a href="CourierDashboard.html" class="logo">QuickDrop</a>
+            
+            <a href="CourierDashboard.html" class="nav-link exit-link">← End Navigation</a>
+        </div>
     </header>
     
     <main class="map-container">
