--- a/frontend/Profile.html
+++ b/frontend/Profile.html
@@ -19,7 +19,7 @@
                     <a href="#" class="profile-toggle" id="profileToggle">Profile ▼</a>
                     <ul class="dropdown-menu" id="profileDropdown">
                         <li><a href="Profile.html" class="nav-link active">Settings</a></li>
-                        <li><a href="login.html">Sign Out</a></li>
+                        <li><a href="Login.html">Sign Out</a></li>
                     </ul>
                 </li>
             </ul>
