--- a/frontend/SignUp.html
+++ b/frontend/SignUp.html
@@ -71,7 +71,7 @@
             </form>
 
             <p class="auth-link">
-                Already have an account? <a href="login.html">Sign In</a>
+                Already have an account? <a href="Login.html">Sign In</a>
             </p>
         </div>
 
