feat: update integration

--- a/frontend/CustomerDashboard.html
+++ b/frontend/CustomerDashboard.html
@@ -154,15 +154,11 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="courier">Choose Delivery Person</label>
-                    <select id="courier" name="courier" required>
-                        <option value="">Select available courier</option>
-                        <option value="didier">Didier M. - Online (Rating: 4.8)</option>
-                        <option value="solange">Solange K. - Online (Rating: 4.9)</option>
-                        <option value="moise">Moise R. - Offline</option>
-                        <option value="jeanne">Jeanne M. - Online (Rating: 4.7)</option>
+                    <label for="courier">Choose Delivery Person (Optional)</label>
+                    <select id="courier" name="courier">
+                        <option value="">Select available courier (optional)</option>
                     </select>
-                    <small class="courier-note">Only online couriers are available for selection</small>
+                    <small class="courier-note">Only online couriers shown. Leave empty to let couriers accept your order.</small>
                 </div>
 
                 <div class="form-group">
