--- a/frontend/CourierDashboard.html
+++ b/frontend/CourierDashboard.html
@@ -75,7 +75,7 @@
             </section>
         
         <section class="content-section upcoming-tasks">
-            <h2>Upcoming Queue</h2>
+            <h2>Available Orders to Accept</h2>
             <div class="list-container">
                 
                 <div class="task-list-item">
