--- a/frontend/CustomerDashboard.html
+++ b/frontend/CustomerDashboard.html
@@ -39,7 +39,7 @@
     <main class="container">
 
         <div class="dashboard-header">
-            <h1>Welcome, Ange!</h1>
+            <h1>Welcome!</h1>
         </div>
 
         <section class="content-section active-deliveries">
@@ -137,7 +137,7 @@
                
                 <div class="form-group">
                     <label for="senderName">Sender Name</label>
-                    <input type="text" id="senderName" name="senderName" value="Ange K." required>
+                    <input type="text" id="senderName" name="senderName" required>
                 </div>
                 <div class="form-group">
                     <label for="senderPhone">Sender Phone</label>
