--- a/frontend/landingpage.html
+++ b/frontend/landingpage.html
@@ -40,7 +40,7 @@
                 <div class="hero-content" id="heroContent">
                     <h2 class="hero-title">Fast &amp; Reliable Parcel Delivery Across Rwanda</h2>
                     <p class="hero-subtitle">Connect senders and receivers seamlessly. Your parcels delivered safely and on time.</p>
-                    <a href="SignUp.html" class="btn btn-primary">Get Started Today</a>
+                    <a href="Login.html" class="btn btn-primary">Get Started Today</a>
                 </div>
             </div>
         </section>
