--- a/frontend/AdminDashboard.html
+++ b/frontend/AdminDashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <<header>
+    <header>
         <div class="header-inner container">
             <a href="landingpage.html" class="logo">QuickDrop</a>
             
@@ -37,13 +37,7 @@
     <main class="dashboard-container">
 
         <section class="map-container">
-            <iframe 
-                class="map-iframe"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63800.03080612053!2d30.01950794863281!3d-1.9540456999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca4258ed8e797%3A0xf32b36a5053b7f20!2sKigali%2CRwanda!5e0!3m2!1sen!2sin!4v1731002119385!5m2!1sen!2sin" 
-                allowfullscreen="" 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+            <div id="adminMap" style="width: 100%; height: 100%; min-height: 400px;"></div>
         </section>
 
         <aside class="sidebar">
@@ -176,7 +170,13 @@
         </aside>
     </main>
 
-<script src="script.js"></script>
+    <!-- Google Maps API with Places library -->
+    <script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRPKWL5pRa0WXN7a0Fo5Y9S3ApEZgAM8o&libraries=places">
+    </script>
+    
+    <!-- Main script - loads after Google Maps API -->
+    <script src="script.js"></script>
 </body>
 
 </html>
